--- a/ProjectManagement/ProjectManagement.csproj
+++ b/ProjectManagement/ProjectManagement.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="FluentResults" Version="3.16.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.7" />
@@ -23,8 +24,7 @@
 
     <ItemGroup>
       <Folder Include="Common\" />
-      <Folder Include="MappingProfiles\" />
-      <Folder Include="Services\" />
+      <Folder Include="Models\Requests\Users\" />
     </ItemGroup>
 
 </Project>
