--- a/ProjectManagement/ProjectManagement.csproj
+++ b/ProjectManagement/ProjectManagement.csproj
@@ -24,7 +24,7 @@
 
     <ItemGroup>
       <Folder Include="Common\" />
-      <Folder Include="Models\Requests\Users\" />
+      <Folder Include="Models\Requests\" />
     </ItemGroup>
 
 </Project>
